# http-client

./: .gitignore  Cargo.toml  docker-compose.yml  go.mod  go.sum  graphql.dhall  hc.dhall  main.go  main_test.go  request.dhall  response.dhall  setup.sh
cmd/: req.go  resp.go  root.go
docs/config/_default/: config.toml  languages.toml  params.toml
docs/content/docs/: stuff.md
docs/content/docs/language/: _index.md  blocks.md  functions.md
docs/content/posts/: first-post.md
examples/simple/: auth.hc  post.hc
internal/client/: client.go  options.go
internal/handler/: handler.go  http.go  registry.go  registry_test.go
internal/plan/: plan.go
internal/runner/: run.go
language/: ast.go  gen.go  language.go  parser_test.go  validator.go  validator_test.go
pkg/language/: ast.go  language.go  language.peg  parser.go  parser_test.go  validator.go
src/: main.rs
