[package]
name = "http-client"
version = "0.1.0"
authors = ["kryptn <kryptn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serde_dhall = "0.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = "~2.27.0"

[patch.crates-io]
serde_dhall = { git = "https://github.com/kryptn/dhall-rust", branch = "kryptn/add-cors-check" }